# Cubagem---Stone

./: .gitignore  README.md  main.py  pyproject.toml  run_training.py
data/: .~lock.cubagem_40k_amazon.csv#
models/: v1.txt  v10.txt  v11.txt  v2.txt  v3.txt  v4.txt  v5.txt  v7.txt  v8.txt
neural/: __init__.py  config.py  dataloader.py  preprocessing.py  vision.py
neural/embeddings/: __init__.py  embeddings.py  image.py  text.py
neural/model/: __init__.py  model.py  train.py
notebooks/: 1_eda.ipynb  2_regression.ipynb  2_regression_arthur.ipynb  3_images_training.ipynb  4_text.ipynb  4_text_v2.ipynb  5_create_embeddings.ipynb  5_multimodal.ipynb  cubagem_explore.py  images_training.ipynb  num_cat_MLP.ipynb
notebooks/.ipynb_checkpoints/: 1_eda-checkpoint.ipynb  2_regression-checkpoint.ipynb
results/: metrics_log(x+0).csv  metrics_log(x+1).csv  metrics_log(x+5).csv  metrics_logbase1.1(x+0).csv
src/: config.py  dataset.py  model.py  train.py
