[project]
name = "cubagem-stone"
version = "0.1.0"
description = "Solução para o problema de cubagem 12º Workshop de Soluções Matemáticas para Problemas Industriais"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
gpu = [
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
]

[tool.setuptools]
py-modules = ['neural']
